section03-network-ingress-helm/lab-3-2-microservices/k8s/customers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers
  namespace: lab3-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customers
  template:
    metadata:
      labels:
        app: customers
    spec:
      containers:
        - name: customers
          image: lab3-2-customers:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customers-svc
  namespace: lab3-2
spec:
  selector:
    app: customers
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
