section03-network-ingress-helm/lab-3-2-microservices/k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  namespace: lab3-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: lab3-2-products:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: products-svc
  namespace: lab3-2
spec:
  selector:
    app: products
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
